<resources>
    <string name="app_name">QuandooTest</string>

    <string name="startgame">Start</string>
    <string name="stopgame">Stop</string>
    <string name="death">Death</string>
    <string name="birth">Birth</string>
    <string name="s1">1 neighbour cell\nin close proximity.</string>
    <string name="s2">2 neighbour cells\nin close proximity.</string>
    <string name="s3">3 neighbour cells\nin close proximity.</string>
    <string name="s4">4 neighbour cells\nin close proximity.</string>
    <string name="s5">5 neighbour cells\nin close proximity.</string>
    <string name="s6">6 neighbour cells\nin close proximity.</string>
    <string name="s7">7 neighbour cells\nin close proximity.</string>
    <string name="s8">8 neighbour cells\nin close proximity.</string>
    <string name="Neighbours">Cell behavior</string>
    <string name="ruleeditor">Rule Editor</string>
    <string name="settings">Settings</string>
    <string name="s0">No neighbour cells\nin close proximity.</string>
    <string name="undefined">undef.</string>
    <string name="load">Load</string>
    <string name="rule_name">Rule Name</string>
    <string name="save">Save</string>
    <string name="save_warning">You need to enter a name for your ruleset before you can save!</string>
    <string name="delete">Delete</string>
    <string name="deleted_ruleset">You have successfully deleted the ruleset </string>
    <string name="deleted_ruleset_warning">Do you really want to delete the ruleset</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="pick_ruleset">Pick a ruleset</string>
    <string name="empty"></string>
    <string name="checkbox_explanation">Birth / Death / undef.</string>
    <string name="rule_name_explanation">Name your customized rule.</string>
    <string name="saved_success">Saved Successfully</string>

</resources>
